Fix owl nav button alignment

--- a/theme/theme.css
+++ b/theme/theme.css
@@ -1144,6 +1144,10 @@ form .wpcf7-textarea {
     padding: 1em 0;
 }
 
+.owl-nav {
+    width: 90%;
+}
+
 }/*end 600*/
 
 
